--- a/Bai_tap/web_ban_hang/css/pay.css
+++ b/Bai_tap/web_ban_hang/css/pay.css
@@ -126,6 +126,7 @@ element.style {
   display: block;
   padding: 5px;
   width: 17rem;
+  cursor: pointer;
 }
 .btn-pri:hover {
   box-shadow: 1rem 1rem 3rem rgba(0, 0, 0, 0.4);
